--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -25,4 +26,24 @@ h1:hover {
 
 canvas {
   background-color: black;
+}
+
+.controls {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 40px;
+  background-color: #333;
+  width: 608px;
+  padding: 0px 20px;
+}
+
+.left, .up, .down, .right {
+  background-color: #fc0;
+  width: 100%;
+  height: 70px;
+  margin: 20px 0px;
+}
+
+.left, .right {
+  margin-top: 65px;
 }
