--- a/main.css
+++ b/main.css
@@ -28,6 +28,21 @@ canvas {
   background-color: black;
 }
 
+.info {
+  background-color: #333;
+  width: 608px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.info p {
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 18px;
+}
+
 .controls {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -42,6 +57,7 @@ canvas {
   width: 100%;
   height: 70px;
   margin: 20px 0px;
+  border-radius: 10px;
 }
 
 .left, .right {
