--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+.flex {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,7 +24,7 @@ body {
   margin: 20px;
 }
 
-.startButton {
+#startButton {
   background-image: url("assets/boton_ui_3_up.png");
   height: 28px;
   font-family: 'VT323', monospace;
@@ -33,9 +33,10 @@ body {
   font-size: 22px;
   font-weight: 700;
   color: white;
+  position: absolute;
 }
 
-.startButton:hover {
+#startButton:hover {
   background-image: url("assets/boton_ui_3_down.png");
   cursor: pointer;
 }
@@ -44,27 +45,25 @@ canvas {
   background-color: #dbf3ff;
 }
 
-.info {
+#info {
   background-color: #333;
-  width: 456px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 6px 10px;
 }
 
-.info p {
+#info p {
   color: #fff;
   font-family: 'VT323', monospace;
   font-size: 22px;
   font-weight: 700;
 }
 
-.controls {
+#controls {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   background-color: #333;
-  width: 456px;
   padding: 0px 20px;
 }
 
