--- a/main.css
+++ b/main.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  margin: 10px;
+  background-color: #333;
+}
+
 .flex {
   display: flex;
   flex-direction: column;
@@ -33,10 +38,12 @@ h1 {
   font-size: 22px;
   font-weight: 700;
   color: white;
+  opacity: 0;
 }
 
 #startButton {
   position: absolute;
+  opacity: 1;
 }
 
 h1:hover {
@@ -56,7 +63,18 @@ canvas {
   padding: 6px 10px;
 }
 
+#info {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+#actions {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+
 p {
+  opacity: 0;
   color: #0064d3;
   font-family: 'VT323', monospace;
   font-size: 22px;
@@ -64,10 +82,12 @@ p {
 }
 
 #controls {
+  margin-top: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   background-color: #333;
   padding: 0px 20px;
+  border-radius: 10px;
 }
 
 .left, .up, .down, .right {
